<resources>
    <string name="app_name">IDictionary</string>
    <string name="dictionary">Словник</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Налаштування</string>
    <string name="search">Пошук</string>
    <string name="progress">%d%</string>
    <string name="create">Додати:</string>
    <string name="new_card">Створити нову колоду</string>
    <string name="new_word">Додати нове слово</string>
    <string name="back">Назад</string>
    <string name="enter_name_for_new_card">Введіть назву колоди:</string>
    <string name="card">Колода</string>
    <string name="add">Додати</string>
    <string name="select_card">Виберіть колоду:</string>
    <string name="add_new_word">Додайте нове слово:</string>
    <string name="card_error">Введіть назву колоди!</string>
    <string name="original_text_error">Введіть оригінальне слово!</string>
    <string name="translated_text_error">Введіть переклад до слова!</string>
    <string name="known_word_count">Знаю - %d</string>
    <string name="unknown_word_count">Не знаю - %d</string>
</resources>
