<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_transparent"
    android:paddingBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_dialog"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:id="@+id/create_new_card_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/new_card"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/large_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/secondaryText" />

        <TextView
            android:id="@+id/add_new_word_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/new_word"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/large_text" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_button"
            android:text="@string/back"
            android:textColor="@android:color/white" />


    </LinearLayout>

</RelativeLayout>